docs: effective go fininshed until interface

--- a/ch02_go_basic/index.html
+++ b/ch02_go_basic/index.html
@@ -2234,7 +2234,12 @@ map[string] int{&#34;CST&#34;:-21600, &#34;PST&#34;:-28800, &#34;EST&#34;:-18000
 <span class="p">}</span>
 </code></pre></td></tr></table>
 </div>
-</div><p><code>HandlerFunc</code>는 <code>ServeHTTP</code>라는 매서드를 같는 타입으로, 이 타입의 값은 HTTP request에 서비스를 제공한다. 메서드의 구현을 한번 살펴 보라: 리시버는 함수, f이고 메서드가 f를 부른다. 이상해 보일 수도 있지만, 리시버가 채널이고 메서드가 채널에 데이터를 보내는 예와 비교해도 크게 다르지 않다.</p>
+</div><p><code>HandlerFunc</code>는 <code>ServeHTTP</code>라는 매서드를 같는 타입으로, 이 타입의 값은 HTTP request에 서비스를 제공한다.</p>
+<p>메서드의 구현을 한번 살펴 보자.</p>
+<ul>
+<li>리시버는 함수, f이고 메서드가 f를 부른다.</li>
+<li>이상해 보일 수도 있지만, 리시버가 채널이고 메서드가 채널에 데이터를 보내는 예와 비교해도 크게 다르지 않다.</li>
+</ul>
 <h2 id="the-blank-identifier">The blank identifier</h2>
 <blockquote>
 <p><a href="https://gosudaweb.gitbooks.io/effective-go-in-korean/content/the_blank_identifier.html" target="_blank" rel="noopener noreffer">https://gosudaweb.gitbooks.io/effective-go-in-korean/content/the_blank_identifier.html</a></p>
