docs: spiritual investments v1

--- a/a-gift-to-my-children-in-2009/index.html
+++ b/a-gift-to-my-children-in-2009/index.html
@@ -138,6 +138,16 @@
 </nav></div>
             </div><div class="content" id="content"><p><em>나에게 권위에 대한 자발적 순종을 알려준, 적당히 욕심 많은 아버지가 딸들에게 보내는 헌신적인 사랑</em></p>
 <br />
+<center>
+<p><img
+        class="lazyload"
+        src="/svg/loading.min.svg"
+        data-src="/images/gift_to_my_children.jpeg"
+        data-srcset="/images/gift_to_my_children.jpeg, /images/gift_to_my_children.jpeg 1.5x, /images/gift_to_my_children.jpeg 2x"
+        data-sizes="auto"
+        alt="/images/gift_to_my_children.jpeg"
+        title="/images/gift_to_my_children.jpeg" /></p>
+</center>
 <h2 id="1-주제-질문과-주제">1. 주제 질문과 주제</h2>
 <blockquote>
 <p>책의 주요 질문은 무엇이고 그에 대한 답은?</p>
