fix: image pixel

--- a/warren_buffett/index.html
+++ b/warren_buffett/index.html
@@ -470,15 +470,8 @@
 <li>151 할 가치가 전혀 없는 일은 잘할 가치 역시 전혀 없다. 본질적인 가치가 낮은 기업은 결국 앞으로 돈을 벌 가망성도 희박하다. 그렇다면 왜 자신에게 전혀 이롭지 않은 기업에 아까운 시간과 열정을 낭비하는가?</li>
 <li>153 &ldquo;기업 실적이 좋고 나쁜 것은 얼마나 노를 잘 젓느냐의 문제라기보다 얼마나 좋은 배를 선택했느냐의 문제다. 물이 샌다는 사실을 알았다면 배를 갈아타는 것이 훨씬 생산적이다.&rdquo;</li>
 </ul>
-<center>
-<p><img
-        class="lazyload"
-        src="/svg/loading.min.svg"
-        data-src="/images/buffeet2.jpeg"
-        data-srcset="/images/buffeet2.jpeg, /images/buffeet2.jpeg 1.5x, /images/buffeet2.jpeg 2x"
-        data-sizes="auto"
-        alt="/images/buffeet2.jpeg"
-        title="/images/buffeet2.jpeg" /></p>
+<center >
+<img width="601" height="448" src="/images/buffeet2.jpeg"/>
 </center>
 <h3 id="11-mistakes-to-beware-of-치명적-실수">11. Mistakes to Beware Of (치명적 실수)</h3>
 <ul>
@@ -534,14 +527,7 @@
 </li>
 </ul>
 <center>
-<p><img
-        class="lazyload"
-        src="/svg/loading.min.svg"
-        data-src="/images/buffeet3.webp"
-        data-srcset="/images/buffeet3.webp, /images/buffeet3.webp 1.5x, /images/buffeet3.webp 2x"
-        data-sizes="auto"
-        alt="/images/buffeet3.webp"
-        title="/images/buffeet3.webp" /></p>
+<img width="601" height="448" src="/images/buffeet3.webp"/>
 </center>
 <h3 id="14-long-term-economic-value-is-the-secret-버핏이-욕심-부릴-때-">14. Long-Term Economic Value is the Secret( 버핏이 욕심 부릴 때 )</h3>
 <ul>
