--- a/about/index.html
+++ b/about/index.html
@@ -172,10 +172,12 @@
 <br/>
 <div align="center">
     <img src="/images/profile3.png" width=200> <br/>
-    <b>Minwook Je</b> <br/>
+    <b>Minwook Je</b>
+    <br/>
     <a href="https://github.com/minkj1992"><img src="/images/github.png" width=20 align="center"> GitHub |</a>
     <a href="https://www.linkedin.com/in/minwook-je-934a16178/"><img src="/images/linkedin.png" width=16 align="center"> LinkedIn |</a>
     <a href="https://minkj1992.github.io"><img src="/images/web.png" width=16 align="center"> Website</a>
+    <br/>
     <a href="https://blog.naver.com/minkj1992"><img src="/images/blog.png" width=16 align="center"> Blog</a>
     <a href="https://minkj1992.github.io"><img src="/images/kakao.png" width=16 align="center"> KakaoTalk</a>
     <p>Hi I'm <strong>minwook</strong>. I want to be a conscientious person weighing my love and justice. 🐋</p>
@@ -190,12 +192,15 @@
 <p>2022.03 - 2022.09</p>
 </blockquote>
 <center>
-<figure>
-    <img src="/images/bear.webp" style="width:100%"/>
-    <figcaption>
-        <p>Headquarters: Redwood City, California</p>
-    </figcaption>
-</figure>
+<p><img
+        class="lazyload"
+        src="/svg/loading.min.svg"
+        data-src="/images/bear.jpeg"
+        data-srcset="/images/bear.jpeg, /images/bear.jpeg 1.5x, /images/bear.jpeg 2x"
+        data-sizes="auto"
+        alt="/images/bear.jpeg"
+        title="/images/bear.jpeg" /></p>
+<p>Headquarters: Redwood City, California</p>
 <p><a href="https://www.bearrobotics.ai/" target="_blank" rel="noopener noreffer">HomePage</a>
  | <a href="https://www.linkedin.com/company/bear-robotics-inc/about/" target="_blank" rel="noopener noreffer">Linkedin</a>
 </p>
@@ -204,6 +209,20 @@
 <blockquote>
 <p>2020.07 - 2022.03</p>
 </blockquote>
+<center>
+<p><img
+        class="lazyload"
+        src="/svg/loading.min.svg"
+        data-src="/images/about_kakao.webp"
+        data-srcset="/images/about_kakao.webp, /images/about_kakao.webp 1.5x, /images/about_kakao.webp 2x"
+        data-sizes="auto"
+        alt="/images/about_kakao.webp"
+        title="/images/about_kakao.webp" /></p>
+<p>Headquarters: Jeju, Korea</p>
+<p><a href="https://www.kakaocorp.com" target="_blank" rel="noopener noreffer">HomePage</a>
+ | <a href="https://www.linkedin.com/company/kakaocorp/about/" target="_blank" rel="noopener noreffer">Linkedin</a>
+</p>
+</center>
 <p><code>Software Engineer</code></p>
 <ul>
 <li>Joined <code>Blockchain task force</code>(<code>Krust</code>) and developed front page and API server that issues <code>Klaytn</code> NFT based certification cards for Korea National Human Resources certification system</li>
@@ -211,35 +230,44 @@
  : Developed a B2B cloud service that manages web identification cards for the membership of client companies.</li>
 <li>Deployed Kakao cloud services with Kubernetes and RabbitMQ.</li>
 </ul>
-<center>
-<figure>
-    <img src="/images/kakao.webp" width="100%"/>
-    <figcaption>
-        <p>Headquarters: Jeju, Korea</p>
-    </figcaption>
-</figure>
-<p><a href="https://www.kakaocorp.com" target="_blank" rel="noopener noreffer">HomePage</a>
- | <a href="https://www.linkedin.com/company/kakaocorp/about/" target="_blank" rel="noopener noreffer">Linkedin</a>
-</p>
-</center>
 <h3 id="1-3-semes---samsung-electronics">1-3. SEMES - Samsung Electronics</h3>
 <blockquote>
 <p>2020.01 - 2020.06</p>
 </blockquote>
-<p><code>Embedded Software Engineer(S3)</code></p>
-<ul>
-<li>Developed a thread scheduling software for a distributed semiconductor etching system using C++</li>
-</ul>
 <center>
-<img src="/images/semes.jpeg" width="100%"/>
+<p><img
+        class="lazyload"
+        src="/svg/loading.min.svg"
+        data-src="/images/semes.webp"
+        data-srcset="/images/semes.webp, /images/semes.webp 1.5x, /images/semes.webp 2x"
+        data-sizes="auto"
+        alt="/images/semes.webp"
+        title="/images/semes.webp" /></p>
 <p><a href="https://www.semes.com/" target="_blank" rel="noopener noreffer">HomePage</a>
  | <a href="https://www.linkedin.com/company/semes/about/" target="_blank" rel="noopener noreffer">Linkedin</a>
 </p>
 </center>
+<p><code>Embedded Software Engineer(S3)</code></p>
+<ul>
+<li>Developed a thread scheduling software for a distributed semiconductor etching system using C++</li>
+</ul>
 <h3 id="1-4-nexters">1-4. Nexters</h3>
 <blockquote>
 <p>2020.11 - 2022.12</p>
 </blockquote>
+<center>
+<p><img
+        class="lazyload"
+        src="/svg/loading.min.svg"
+        data-src="/images/nexters.png"
+        data-srcset="/images/nexters.png, /images/nexters.png 1.5x, /images/nexters.png 2x"
+        data-sizes="auto"
+        alt="/images/nexters.png"
+        title="/images/nexters.png" /></p>
+<p><a href="https://teamnexters.com/" target="_blank" rel="noopener noreffer">Homepage</a>
+ | <a href="https://github.com/Nexters" target="_blank" rel="noopener noreffer">Github</a>
+</p>
+</center>
 <p><code>Management Staff</code></p>
 <ul>
 <li>Instructed software development project teams of 64 members, provided feedbacks throughout sprints and organized team building events.</li>
@@ -248,25 +276,26 @@
 <ul>
 <li>Led a backend development of a couple’s date planner web service using NestJS, typescript, GraphQL, mongoDB and Kakao-place API</li>
 </ul>
-<center>
-<img src="/images/semes.jpeg" width="100%"/>
-<p><a href="https://teamnexters.com/" target="_blank" rel="noopener noreffer">Homepage</a>
- | <a href="https://github.com/Nexters" target="_blank" rel="noopener noreffer">Github</a>
-</p>
-</center>
 <h3 id="1-5-likelion">1-5. LIKELION</h3>
 <blockquote>
 <p>2018.01 - 2019.12</p>
 </blockquote>
+<center>
+<p><img
+        class="lazyload"
+        src="/svg/loading.min.svg"
+        data-src="/images/likelion.jpeg"
+        data-srcset="/images/likelion.jpeg, /images/likelion.jpeg 1.5x, /images/likelion.jpeg 2x"
+        data-sizes="auto"
+        alt="/images/likelion.jpeg"
+        title="/images/likelion.jpeg" /></p>
+<p><a href="https://www.likelion.net/" target="_blank" rel="noopener noreffer">Homepage</a>
+</p>
+</center>
 <p><code>Student Developer</code></p>
 <ul>
 <li>Launched an official website for Ajou University Festival using Django and  AWS EC2</li>
 </ul>
-<center>
-<img src="/images/likelion.jpeg" width="100%"/>
-<p><a href="https://www.likelion.net/" target="_blank" rel="noopener noreffer">Homepage</a>
-</p>
-</center>
 <h3 id="1-6-ajou-university-link">1-6. Ajou University LINK+</h3>
 <blockquote>
 <p>2018.03 - 2018.12</p>
